# bazel-examples

angular-ngc/: MODULE.bazel  WORKSPACE.bazel  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
angular-ngc/applications/grpc/: BUILD.bazel
angular-ngc/applications/grpc/app/: app.component.spec.ts  app.component.ts
angular-ngc/proto/: BUILD.bazel  example.proto
bazelrc/: .bazeliskrc
